<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http:// schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="15dp"
        tools:context=".RegistroActivity">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Regístrate"
            android:id="@+id/tutor"
            android:textColor="@color/azulOscuro"
            android:textSize="40dp"
            android:textStyle="bold"
            android:gravity="center"
            />

        <EditText
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nombre"
            android:inputType="textCapSentences"/>

        <EditText
            android:id="@+id/apellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_apellido"
            android:inputType="textCapSentences"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/passwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_pass"
            android:inputType="textPassword" />
        <EditText
            android:id="@+id/passwd2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="@string/hint_pass2"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnregister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/azulOscuro"
            android:text="@string/btn_registrar"
            app:cornerRadius="25dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/title_login"
            android:textAlignment="center"
            android:textSize="16dp" />

        <Button
            android:id="@+id/btnlogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/azulOscuro"
            android:text="@string/btn_loginregistro"
            app:cornerRadius="25dp" />

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>