<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background_login"
    android:layout_height="match_parent">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="15dp"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TUTOR"
            android:id="@+id/tutor"
            android:textColor="@color/azulOscuro"
            android:textSize="40dp"
            android:textStyle="bold"
            android:layout_margin="50dp"
            android:gravity="center"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusTopStart="25dp"
            app:boxCornerRadiusTopEnd="25dp"
            app:boxCornerRadiusBottomEnd="25dp"
            app:boxCornerRadiusBottomStart="25dp"
            style="?attr/textInputOutlinedStyle"
            android:layout_below="@id/tutor"
            android:layout_marginHorizontal="20dp"
>
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_baseline_person_24"
            android:drawablePadding="10dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordstyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusTopStart="25dp"
            app:boxCornerRadiusTopEnd="25dp"
            app:boxCornerRadiusBottomEnd="25dp"
            app:boxCornerRadiusBottomStart="25dp"
            style="?attr/textInputOutlinedStyle"
            android:layout_below="@id/username"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="28dp"

            >
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:drawableLeft="@drawable/ic_baseline_edit_24"
            android:drawablePadding="10dp"
            android:hint="@string/hint_pass"
            android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/azulOscuro"
            android:text="@string/btn_login"
            app:cornerRadius="25dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/title_registro"
            android:textAlignment="center"
            android:textSize="16dp" />

        <Button
            android:id="@+id/registro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/azulOscuro"
            android:text="@string/btn_registro"
            app:cornerRadius="25dp" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>