<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http:// schemas.android.com/tools"
    tools:context=".Session.View.Activity.RegisterFragment"
    xmlns:tools2="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="15dp"
            tools2:layout_editor_absoluteX="20dp"
            tools2:layout_editor_absoluteY="-16dp"
            tools:context=".RegistroActivity">

            <com.google.android.material.textfield.TextInputLayout
                style="?attr/textInputOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                app:boxCornerRadiusBottomEnd="25dp"
                app:boxCornerRadiusBottomStart="25dp"
                app:boxCornerRadiusTopEnd="25dp"
                app:boxCornerRadiusTopStart="25dp">

                <EditText
                    android:id="@+id/nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_nombre"
                    android:inputType="textCapSentences" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="?attr/textInputOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/nombre"
                android:layout_marginHorizontal="20dp"
                app:boxCornerRadiusBottomEnd="25dp"
                app:boxCornerRadiusBottomStart="25dp"
                app:boxCornerRadiusTopEnd="25dp"
                app:boxCornerRadiusTopStart="25dp">

                <EditText
                    android:id="@+id/apellido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_apellido"
                    android:inputType="textCapSentences" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="?attr/textInputOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/apellido"
                android:layout_marginHorizontal="20dp"
                app:boxCornerRadiusBottomEnd="25dp"
                app:boxCornerRadiusBottomStart="25dp"
                app:boxCornerRadiusTopEnd="25dp"
                app:boxCornerRadiusTopStart="25dp">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="?attr/textInputOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/email"
                android:layout_marginHorizontal="20dp"
                app:boxCornerRadiusBottomEnd="25dp"
                app:boxCornerRadiusBottomStart="25dp"
                app:boxCornerRadiusTopEnd="25dp"
                app:boxCornerRadiusTopStart="25dp"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_pass"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="?attr/textInputOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/passwd"
                android:layout_marginHorizontal="20dp"
                app:boxCornerRadiusBottomEnd="25dp"
                app:boxCornerRadiusBottomStart="25dp"
                app:boxCornerRadiusTopEnd="25dp"
                app:boxCornerRadiusTopStart="25dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwd2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:hint="@string/hint_pass2"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnregister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/blue"
                android:text="@string/btn_registrar"
                app:cornerRadius="25dp"
                android:paddingHorizontal="20dp"/>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>