<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".Session.View.Fragments.LoginFragment">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".Session.View.Activity.LoginActivity">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username"
        style="?attr/textInputOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:boxCornerRadiusBottomEnd="25dp"
        app:boxCornerRadiusBottomStart="25dp"
        app:boxCornerRadiusTopEnd="25dp"
        app:boxCornerRadiusTopStart="25dp">

        <EditText
            android:id="@+id/email"
            style="@style/LearnEditTextStyleRound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_baseline_person_24"
            android:drawablePadding="10dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordstyle"
        style="?attr/textInputOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        app:boxCornerRadiusBottomEnd="25dp"
        app:boxCornerRadiusBottomStart="25dp"
        app:boxCornerRadiusTopEnd="25dp"
        app:boxCornerRadiusTopStart="25dp"
        app:endIconMode="password_toggle">

        <EditText
            android:id="@+id/password"
            style="@style/LearnEditTextStyleRound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:drawablePadding="10dp"
            android:hint="@string/hint_pass"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordstyle"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/blue"
        android:text="@string/btn_login"
        android:paddingHorizontal="20dp"
        app:cornerRadius="25dp" />



</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>